# temple

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  flake.nix  test-chat.py  test-chat.sh  test-e2e.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: temple.asc
nix/: daemon-module.nix  module.nix
scripts/: audit-log.sh
temple-client/: Cargo.toml
temple-client/src/: app.rs  client.rs  daemon.rs  input.rs  main.rs  render.rs  state.rs  tools.rs  ui.rs
temple-protocol/: Cargo.toml
temple-protocol/src/: command.rs  lib.rs
temple-server/: Cargo.toml
temple-server/src/: agent.rs  auth.rs  config.rs  cron.rs  direct_tools.rs  litellm.rs  main.rs  mcp.rs  memory.rs  nextcloud.rs  ntfy.rs  permissions.rs  queue.rs  router.rs  server.rs  signal.rs  ssh.rs  web.html  web.rs
