[package]
name = "temple-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "temple"
path = "src/main.rs"

[dependencies]
temple-protocol = { path = "../temple-protocol" }
iocraft = "0.8"
crossterm = "0.29"
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "5"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
chrono = { version = "0.4" }
smol = "2"
whoami = "2"
tracing = "0.1"
base64 = "0.22"
native-tls = "0.2"
unicode-width = "0.2"
