[package]
name = "temple-server"
version = "0.1.0"
edition = "2021"

[dependencies]
temple-protocol = { path = "../temple-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"
rand = "0.8"
dirs = "5"
url = "2"